--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
 title: Jens Pippig's sportliche Aktivitäten
 email: jens.pippig@gmail.com
-description: >
-  Ich bin ein leidenschaftlicher Mountainbike-Alpinist, Splitboarder und Abenteurer,
-  der mit seiner Freundin im Van lebt. Auf meiner Seite bekommst du einen umfangreichen
-  Einblick meiner Touren.
+description: Ich bin ein leidenschaftlicher Mountainbike-Alpinist, Splitboarder und Abenteurer, der mit seiner Freundin im Van lebt. Auf meiner Seite bekommst du einen umfangreichen Einblick meiner Touren.
 baseurl: "/blog"
 url: "https://jenspippig.github.io"
 twitter_username: ""
