--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ url: "https://jenspippig.github.io"
 twitter_username: ""
 github_username: "jenspippig"
 
+permalink: /:title/
+
 theme: minima
 plugins:
   - jekyll-feed
