--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Jens Pippig's sportliche Aktivitäten
+title: Jens Pippig
 email: jens.pippig@gmail.com
 description: Ich bin ein leidenschaftlicher Mountainbike-Alpinist, Splitboarder und Abenteurer, der mit seiner Freundin im Van lebt. Auf meiner Seite bekommst du einen umfangreichen Einblick meiner Touren.
 baseurl: "/blog"
